# paper-reading-agent

./: .gitignore  LICENSE  README.md  start.bat  start.sh
backend/: .env.example  app.py  database.py  pyproject.toml  requirements.txt  test_check_db_message.py
backend/agents/: __init__.py  agent.py  image_extractor.py  prompts.py  tools.py
backend/agents/stage_prompts/: __init__.py  code_analysis.py  context_and_contribution.py  context_building.py  critical_analysis.py  math_understanding.py  methodology.py  quick_scan.py  section_deep_dive.py  section_explorer.py
backend/agents/step_prompts/: __init__.py  step1_quick_scan.py  step2_context_building.py  step3_methodology.py  step4_critical_analysis.py  step5_math_understanding.py  step6_code_analysis.py
backend/models/: __init__.py  paper.py  session.py
backend/providers/: __init__.py  base.py  gemini_provider.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  styled-components.d.ts  types.ts
frontend/src/components/AnimationRenderer/: AnimationStyles.ts  index.tsx
frontend/src/components/ChatInterface/: ChatStyles.ts  index.tsx
frontend/src/components/Common/: index.tsx
frontend/src/components/MessageItem/: MessageStyles.ts  index.tsx
frontend/src/components/Modals/: DeleteModal.tsx  ProfileModal.tsx  UploadModal.tsx
frontend/src/components/Sidebar/: SidebarStyles.ts  index.tsx
frontend/src/theme/: Theme.ts
